appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- tapOn:
    id: auth_usb_id_text_field
- inputText: "3333333"
- tapOn:
    id: auth_password_text_field
- inputText: "enrollment-outdated-pass"
- tapOn:
    id: auth_keyboard_dismiss_area
- tapOn:
    id: auth_sign_in_button
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_record_item
- extendedWaitUntil:
    visible:
      id: record_content_container
    timeout: 30000
- runFlow: ../_shared/open-current-enrollment-proof.yaml
- extendedWaitUntil:
    visible:
      id: auth_update_password_idle_container
    timeout: 20000
