appId: com.gdavidpb.tuindice.debug
---
- runFlow: ../_shared/launch-clean.yaml
- tapOn:
    id: auth_usb_id_text_field
- inputText: "6666666"
- inputText: "6"
- tapOn:
    id: auth_password_text_field
- inputText: "pensum-not-found-pass"
- tapOn:
    id: auth_keyboard_dismiss_area
- tapOn:
    id: auth_sign_in_button
- runFlow: ../_shared/continue-to-summary-after-auth.yaml
- tapOn:
    id: maincore_tuindice_bottom_bar_pensum_item
- extendedWaitUntil:
    visible:
      id: base_empty_view_container
    timeout: 30000
- assertVisible:
    id: base_empty_view_title
- assertVisible:
    id: base_empty_view_message
